--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "build": "bun scripts/build.ts",
     "typecheck": "tsc --noEmit",
     "lint": "bunx eslint \"src/**/*.{ts,tsx}\" \"tests/**/*.{ts,tsx}\"",
-    "test": "vitest"
+    "test": "vitest",
+    "generate:hero-image": "bun scripts/generate-hero-image.ts"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.16.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
@@ -21,15 +26,12 @@
     "@typescript-eslint/parser": "^8.16.0",
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/eslint-plugin": "^1.1.0",
-    "@eslint/js": "^9.16.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.6.1",
     "eslint": "^9.14.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "jsdom": "^25.0.1",
+    "puppeteer": "^24.30.0",
     "typescript": "^5.6.3",
     "vitest": "^2.1.5"
   },
