Fix: Update publicPath to include /docs/ for GitHub Pages
- Changed publicPath from /Portfolio/client/ to /Portfolio/docs/client/
- This matches the actual GitHub Pages deployment structure
- Fixes chunk loading errors on production

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ bun.lockb
 .pnp
 .pnp.js
 
-# Build outputs
-dist/
-client/
+# Build outputs (root level only - docs/ is committed for GitHub Pages)
+/dist/
+/client/
 *.tsbuildinfo
 
 # Production build (docs/ is committed for GitHub Pages)
