Refactor: Add deployment validation and preventive measures
- Add validate-deployment.ts script to check deployment configuration
- Add CODEOWNERS file for GitHub Pages files
- Add pre-deploy and deploy npm scripts
- Improve deployment workflow reliability
- Prevent future GitHub Pages configuration issues

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "bun index.ts",
     "serve": "NODE_ENV=production bun index.ts",
     "build": "bun scripts/build.ts",
+    "validate-deployment": "bun scripts/validate-deployment.ts",
+    "pre-deploy": "bun run build && bun run validate-deployment",
+    "deploy": "bun run pre-deploy && git add docs/ && echo '✅ Ready to commit and push. Run: git commit -m \"Deploy\" && git push'",
     "typecheck": "tsc --noEmit",
     "lint": "bunx eslint --config config/eslint.config.cjs \"src/**/*.{ts,tsx}\" \"tests/**/*.{ts,tsx}\"",
     "test": "vitest --config config/vitest.config.ts",
