--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,12 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Bun (with retry)
+      - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: "1.3.2"
-        continue-on-error: false
-        timeout-minutes: 5
 
       - name: Verify Bun installation
         run: |
@@ -47,6 +45,7 @@ jobs:
           test -f docs/client/main.js || exit 1
           test -f docs/.nojekyll || exit 1
           echo "✓ All critical files exist"
+          ls -la docs/client/*.js | wc -l
           echo "✓ Build verification passed"
 
       - name: Upload artifact
