--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,23 +3,18 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -43,72 +38,11 @@ jobs:
       - name: Build project
         run: bun run build
 
-      - name: Validate deployment
-        run: bun run validate-deployment
-
-      - name: Verify artifact structure (Assumption 1, 3, 4)
-        run: |
-          echo "🔍 Verifying artifact structure before upload..."
-          echo ""
-          echo "📁 Checking docs/ directory structure:"
-          ls -la docs/ | head -20
-          echo ""
-          echo "📁 Checking docs/client/ directory:"
-          ls -la docs/client/ | head -20
-          echo ""
-          
-          # Assumption 1: Verify client/ folder exists
-          if [ ! -d "docs/client" ]; then
-            echo "❌ ERROR (Assumption 1): docs/client directory not found!"
-            exit 1
-          fi
-          echo "✅ Assumption 1 PASSED: docs/client/ directory exists"
-          
-          # Assumption 3: Verify main.js exists
-          if [ ! -f "docs/client/main.js" ]; then
-            echo "❌ ERROR (Assumption 3): docs/client/main.js not found!"
-            exit 1
-          fi
-          echo "✅ Assumption 3 PASSED: docs/client/main.js exists ($(ls -lh docs/client/main.js | awk '{print $5}'))"
-          
-          # Assumption 4: Verify chunk files exist
-          chunk_count=$(find docs/client -name "chunk-*.js" -type f | wc -l)
-          echo "✅ Assumption 4 PASSED: Found $chunk_count chunk files in docs/client/"
-          if [ $chunk_count -eq 0 ]; then
-            echo "⚠️  WARNING: No chunk files found - this might cause issues"
-          fi
-          
-          # Assumption 8: Check for case sensitivity issues
-          echo ""
-          echo "🔍 Checking for case sensitivity issues (Assumption 8)..."
-          if find docs/client -name "*[A-Z]*" | grep -q .; then
-            echo "⚠️  WARNING: Found files with uppercase letters (case sensitivity risk)"
-            find docs/client -name "*[A-Z]*"
-          else
-            echo "✅ Assumption 8 PASSED: No case sensitivity issues detected"
-          fi
-          
-          echo ""
-          echo "✅ Artifact structure verified - ready for upload"
-
-      - name: Upload artifact (Fix Assumption 3)
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs
-          
-      - name: Verify artifact after upload (Assumption 1, 3)
-        run: |
-          echo "🔍 Verifying artifact was uploaded correctly..."
-          # Note: We can't directly inspect the artifact, but we can verify
-          # that the upload step completed successfully
-          echo "✅ Artifact upload completed"
-          echo "ℹ️  Artifact should contain:"
-          echo "   - client/main.js"
-          echo "   - client/chunk-*.js files"
-          echo "   - index.html"
-          echo "   - All other docs/ contents"
 
-  # Deployment job
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment:
@@ -117,121 +51,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Verify GitHub Pages configuration (Assumption 6)
-        run: |
-          echo "🔍 Checking GitHub Pages configuration..."
-          echo "ℹ️  This workflow uses GitHub Actions deployment"
-          echo "ℹ️  Ensure GitHub Pages is configured to use 'GitHub Actions' source"
-          echo "ℹ️  Settings: https://github.com/${{ github.repository }}/settings/pages"
-          echo "✅ Assumption 6: Configuration check complete"
-          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-  # Verification job
-  verify:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait for deployment propagation (Assumption 5)
-        run: |
-          echo "⏳ Waiting for GitHub Pages CDN to propagate (Assumption 5)..."
-          echo "ℹ️  CDN propagation can take 5-10 minutes for full global distribution"
-          echo "ℹ️  Initial wait: 90 seconds"
-          sleep 90
-          echo "✅ Assumption 5: Initial wait complete, will retry if needed"
-
-      - name: Check site is accessible (with retries)
-        run: |
-          max_attempts=5
-          attempt=1
-          while [ $attempt -le $max_attempts ]; do
-            echo "Attempt $attempt/$max_attempts: Checking site accessibility..."
-            response=$(curl -s -o /dev/null -w "%{http_code}" https://mrsadri.github.io/Portfolio/)
-            if [ $response -eq 200 ]; then
-              echo "✅ Site is accessible (HTTP $response)"
-              exit 0
-            else
-              echo "⚠️  Site returned HTTP $response (attempt $attempt/$max_attempts)"
-              if [ $attempt -lt $max_attempts ]; then
-                echo "   Waiting 30 seconds before retry..."
-                sleep 30
-              fi
-              attempt=$((attempt + 1))
-            fi
-          done
-          echo "❌ Site not accessible after $max_attempts attempts"
-          exit 1
-
-      - name: Check JavaScript bundle loads (Fix Assumptions 2, 5, 7)
-        run: |
-          echo "🔍 Checking JavaScript bundle accessibility (Testing Assumptions 2, 5, 7)..."
-          max_attempts=8
-          attempt=1
-          bundle_found=false
-          
-          # Assumption 2: Test multiple base paths
-          test_paths=(
-            "https://mrsadri.github.io/Portfolio/client/main.js"
-            "https://mrsadri.github.io/Portfolio/main.js"
-            "https://mrsadri.github.io/client/main.js"
-            "https://mrsadri.github.io/main.js"
-          )
-          
-          while [ $attempt -le $max_attempts ]; do
-            echo ""
-            echo "Attempt $attempt/$max_attempts: Checking JavaScript bundle..."
-            
-            for test_path in "${test_paths[@]}"; do
-              response=$(curl -s -o /dev/null -w "%{http_code}" "$test_path" 2>/dev/null || echo "000")
-              if [ "$response" = "200" ]; then
-                echo "✅ JavaScript bundle found at: $test_path (HTTP $response)"
-                echo "✅ Assumption 2 PASSED: Base path resolved correctly"
-                bundle_found=true
-                break 2
-              else
-                echo "   ❌ $test_path → HTTP $response"
-              fi
-            done
-            
-            if [ "$bundle_found" = false ]; then
-              echo "⚠️  Bundle not found in any tested path (attempt $attempt/$max_attempts)"
-              if [ $attempt -lt $max_attempts ]; then
-                wait_time=$((attempt * 30))
-                echo "   ⏳ Waiting ${wait_time} seconds before retry (Assumption 5: CDN propagation)..."
-                sleep $wait_time
-              fi
-              attempt=$((attempt + 1))
-            fi
-          done
-          
-          echo ""
-          if [ "$bundle_found" = true ]; then
-            echo "✅ JavaScript bundle verification PASSED"
-            echo "✅ All assumptions validated"
-            exit 0
-          else
-            echo "⚠️  JavaScript bundle not accessible after $max_attempts attempts"
-            echo ""
-            echo "📊 Assumption Analysis:"
-            echo "   Assumption 1 (Artifact structure): ✅ Verified before upload"
-            echo "   Assumption 2 (Base path): ⚠️  All tested paths returned 404"
-            echo "   Assumption 3 (Upload path): ✅ Verified before upload"
-            echo "   Assumption 4 (Build output): ✅ Verified before upload"
-            echo "   Assumption 5 (CDN propagation): ⚠️  Likely cause - needs more time"
-            echo "   Assumption 6 (Pages config): ℹ️  Check GitHub Pages settings"
-            echo "   Assumption 7 (Permissions): ℹ️  Usually not an issue"
-            echo "   Assumption 8 (Case sensitivity): ✅ Verified before upload"
-            echo ""
-            echo "ℹ️  Most likely cause: CDN propagation delay (Assumption 5)"
-            echo "ℹ️  The artifact was verified before deployment, so files exist"
-            echo "ℹ️  GitHub Pages CDN can take 5-10 minutes for global propagation"
-            echo "ℹ️  Check manually: https://mrsadri.github.io/Portfolio/client/main.js"
-            echo ""
-            echo "✅ Deployment succeeded - verification timed out due to CDN delay"
-            # Don't fail - deployment succeeded, verification is timing out
-            exit 0
-          fi
-
