--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,14 +5,16 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Prevent GitHub's automatic Jekyll build from running
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Cancel any in-progress deployments to prevent conflicts
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   deploy:
