Fix: Add file verification and ensure proper deployment order
- Add verification step to ensure all required files exist before deployment
- This helps catch deployment issues early
- Ensures .nojekyll and all JS bundles are present

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Verify build files exist
+        run: |
+          echo "Verifying required files exist in docs/..."
+          test -f docs/main.js || (echo "❌ docs/main.js missing!" && exit 1)
+          test -f docs/main.css || (echo "❌ docs/main.css missing!" && exit 1)
+          test -f docs/index.html || (echo "❌ docs/index.html missing!" && exit 1)
+          test -f docs/.nojekyll || (echo "❌ docs/.nojekyll missing!" && exit 1)
+          test -f docs/client/main.js || (echo "❌ docs/client/main.js missing!" && exit 1)
+          echo "✅ All required files present"
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
